unified_tests/pattern_matching/match_arm_missing_expression_before_next_arm/expect/build.text.stderr
lib.copp:5:16: error: expected symbol
          string => "s"
                 ^
lib.copp:7:5: error: expected declaration
      return
      ^
